--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.8.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
     "vite-plugin-static-copy": "^3.0.2"
   }
 }
