--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "1.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "16.4.0",
     "embla-carousel": "8.6.0",
@@ -28,6 +29,7 @@
     "embla-carousel-react": "8.6.0",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
